# PythonProjectTemplates

./: README.md  cookiecutter.json  pyproject.toml
example/calculator/src/: .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
{{ cookiecutter.service_name }}/src/: .env.example  Dockerfile  grpc_server_starter.py  main.py  pyproject.toml  testik.py
{{ cookiecutter.service_name }}/src/cache/: redis_connection.py
{{ cookiecutter.service_name }}/src/config/: app_config.py  fastapi_config.py  kafka_config.py  logger_config.py  pg_config.py  rabbitmq_config.py  redis_config.py  uvicorn_config.py
{{ cookiecutter.service_name }}/src/db/: alchemy_session.py
{{ cookiecutter.service_name }}/src/interfaces/: base_grpc_channel.py  base_http_session_maker.py  base_message_broker.py  base_postgres_cursor_proxy.py  base_proxy.py  base_rabbitmq_routing_configurator.py  base_raw_sql_creator.py  base_repository.py  base_service.py  base_session.py  base_uow.py  pydantic_base.py
{{ cookiecutter.service_name }}/src/protobufs/: index.proto  index_pb2.py  index_pb2_grpc.py
{{ cookiecutter.service_name }}/src/repositories/: asyncpg_repository.py  base_alchemy_repository.py  cache_repository.py  http_connection_proxy.py  http_repository.py  psycopg_repository.py  raw_postgres_repository.py  redis_repository.py  sql_tools.py
{{ cookiecutter.service_name }}/src/services/: index_service.py
{{ cookiecutter.service_name }}/src/to_compose/: app.yaml  kafka.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml
{{ cookiecutter.service_name }}/src/tools/: globals.py  (+1 more)
(+220 files in other folders)
