[tool.poetry]
name = "pythonprojecttemplates"
version = "0.1.0"
description = "Шаблонизатор проектов Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.0"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
